# WebMaster-Pro

./: .flake8  LICENSE  MANIFEST.in  README.md  main_interface.py  network_manager.py  pyproject.toml  requirements.txt  setup.py  splash.py  test_basic.py  wifitoqr.py
.github/workflows/: python-app.yml
src/netmaster_pro/: __init__.py  __main__.py
src/netmaster_pro/core/: __init__.py  network_manager.py  wifi_qr_generator.py
src/netmaster_pro/ui/: __init__.py  main_interface.py  splash_screen.py
src/netmaster_pro/utils/: __init__.py
tests/: __init__.py  test_basic.py
